(bug 12681) 'new message' bar above the page title
New messages bar should appear above page title, for consistency with
other message boxes

I have choose the place over the sitenotice for Monobook and Vector,
because Modern has it already there. Having it in all at the same place
is the best.

--- a/skins/vector/screen.css
+++ b/skins/vector/screen.css
@@ -687,9 +687,15 @@ pre, .mw-code {
 	line-height: 1.3em;
 }
 
+/* Newtalk message */
+.usermessage {
+	font-size: 0.8em;
+	margin-bottom: 1em;
+}
 /* Site Notice (includes notices from CentralNotice extension) */
 #siteNotice {
 	font-size: 0.8em;
+	margin-bottom: 1em;
 }
 #firstHeading {
 	padding-top: 0;
